# studip_fs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  studip_fs.json
